# reader-triage

./: .env.example  .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py  tracing.py
app/migrations/: migrate_v2.py
app/models/: __init__.py  article.py  (+1 more)
backtest/: analyze.py  check_existing.py  collect_highlights.py  methodology.md  score_articles.py  scoring_alternatives.md
docs/: calibration.md  v4-implementation-plan.md
research-scoring-models/: 01 - Embedding Models for Text Regression.md  02 - XGBoost and Gradient Boosting on Embeddings.md  03 - Small Neural Networks on Embeddings.md  04 - Fine-Tuned Embeddings and Representation Learning.md  05 - Classification vs Regression Framing.md  06 - Zero-Inflated and Count Models.md  07 - Feature Engineering Beyond Embeddings.md  08 - Hybrid LLM and ML Scoring Approaches.md  09 - Learning to Rank and Preference Learning.md  10 - Active Learning and Feedback Loops.md  11 - Case Studies in Content Recommendation and Engagement Prediction.md  12 - Dimensionality Reduction and Embedding Quality.md  13 - Evaluation Metrics and Small Dataset Strategies.md  14 - Contrarian Views and Failure Modes.md
tests/: conftest.py  factories.py  test_api.py  test_authors.py  test_binary_scoring.py  test_chat.py  test_models.py  test_opml.py  test_podcast_feed.py  test_podcast_scorer.py  test_podcast_tagger.py  test_podcasts_api.py  test_scorer.py  test_scorer_integration.py  test_summarizer.py  test_sync.py  test_tagger.py  test_transcript.py  test_usage.py  test_youtube_mapper.py
tools/: backfill_content.py  backfill_highlighted.py  backfill_v3.py  backfill_v4.py  cal_data.py  cal_report.py  cal_review.py  calibrate.py  compare_haiku_sonnet.py  compare_models.py  compare_versions.py  embed_articles.py  run_comparison.py  score_inbox_v3.py  sync_archive.py
(+52 files in other folders)
