[project]
name = "reader-triage"
version = "0.1.0"
description = "Article triage tool that surfaces high-value articles from Readwise Reader"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "readwise-plus>=0.1.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.60b1",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.2",
    "einops>=0.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "ty>=0.0.8",
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "scikit-learn>=1.8.0",
    "genbadge[coverage]>=1.1.3",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"backtest/*.py" = ["E402", "F841"]
"tests/conftest.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python-version = "3.12"

[tool.coverage.run]
omit = ["app/migrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
